tests/errors/syn_err09.kt
// misplaced return error
val a = 10 return